// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardPost.Big component testing: Render with snapshot: 1`] = `
<Component
  isDarkTheme={true}
  text="Текст"
>
  <div
    className="card-post card-post_big card-post_theme_dark"
  >
    <Component
      dateOfPublication="19.12.2021"
      isDarkTheme={true}
      userAvatarURL="URL"
      userFullName="Полное Имя"
    >
      <div
        className="card-post__header"
      >
        <Avatar
          shape="circle"
          size="default"
          src="URL"
          style={
            Object {
              "width": 32,
            }
          }
        >
          <span
            className="ant-avatar ant-avatar-circle ant-avatar-image"
            style={
              Object {
                "width": 32,
              }
            }
          >
            <img
              onError={[Function]}
              src="URL"
            />
          </span>
        </Avatar>
        <div
          className="card-post__info card-post__info_big"
        >
          <div
            className="card-post__title card-post__title_big card-post__title_theme_dark"
          >
            Полное Имя
          </div>
          <p
            className="card-post__subtitle card-post__subtitle_big card-post__subtitle_theme_dark"
          >
            19.12.2021
          </p>
        </div>
      </div>
    </Component>
    <Component
      imageURL="URL"
    >
      <div
        className="card-post__image card-post__image_big"
      >
        <img
          alt="img"
          src="URL"
        />
      </div>
    </Component>
    <p
      className="card-post__text_big"
    >
      Текст
    </p>
  </div>
</Component>
`;

exports[`CardPost.Mini component testing: Render with snapshot: 1`] = `
<Component
  isDarkTheme={true}
  text="Текст"
>
  <div
    className="card-post card-post_theme_dark"
  >
    <h1>
      Тест
    </h1>
    <p
      className="card-post__text"
    >
      Текст
    </p>
  </div>
</Component>
`;

exports[`CardPost.Preview component testing: Render with snapshot: 1`] = `
<Component
  dateOfPublication="19.12.2021"
  isDarkTheme={true}
  text="Текст"
  userAvatarURL="URL"
  userFullName="Полное Имя"
>
  <div
    className="card-post card-post_theme_dark"
  >
    <div
      className="card-post__header"
    >
      <Avatar
        shape="circle"
        size="default"
        src="URL"
      >
        <span
          className="ant-avatar ant-avatar-circle ant-avatar-image"
          style={Object {}}
        >
          <img
            onError={[Function]}
            src="URL"
          />
        </span>
      </Avatar>
      <div
        className="card-post__info"
      >
        <div
          className="card-post__title card-post__title_theme_dark"
        >
          Полное Имя
        </div>
        <p
          className="card-post__subtitle card-post__subtitle_theme_dark"
        >
          19.12.2021
        </p>
      </div>
    </div>
    <Component
      imageURL="URL"
    >
      <div
        className="card-post__image"
      >
        <img
          alt="img"
          src="URL"
        />
      </div>
    </Component>
    <p
      className="card-post__text"
    >
      Текст
    </p>
  </div>
</Component>
`;
